Fix header overflow

--- a/style.css
+++ b/style.css
@@ -75,8 +75,10 @@ body{
     height: 35%;
     background-color: rgb(248, 248, 248);
     
-    padding-top: 100px;
+    padding-top: 80px;
     width : 100%;
+    padding-bottom: 20px;
+    overflow: hidden;
 }
 
 .header > p{
